[package]
name = "sdl2sketch"
version = "0.1.0"
authors = ["Jochen Peters <dev@emirp.net>"]
description = "SDL2Sketch for Rust tries to simplify the use of rust-sdl2 inspired by the API of p5.js"
license = "MIT"

[dependencies]
rand = "0.3.14"
num-traits = "0.2.5"
sdl2-sys = "0.31.0"

[dependencies.sdl2]
version = "0.31.0"
default-features = false
features = ["unsafe_textures", "gfx", "image"]
